メモアプリを作成

--- a/01_テキスト/00_JavaScriptで遊んでみよう/index.html
+++ b/01_テキスト/00_JavaScriptで遊んでみよう/index.html
@@ -17,7 +17,9 @@
       const button = document.getElementById("button")
       button.onclick = function () {
         display.textContent = "クリックされた！！"
+        alert("クリックしたね")
       }
+      button.onclick = alertMessage()
     </script>
   </body>
 </html>
