--- a/01_テキスト/01_JavaScriptのイベント/index.html
+++ b/01_テキスト/01_JavaScriptのイベント/index.html
@@ -13,6 +13,15 @@
       <h3>button 要素と click イベント</h3>
       <button id="button">ボタン</button>
     </section>
+    <div>
+      <h2 id="display">0</h2>
+    </div>
+    <button id="plus-button">+1</button>
+
+    <div id="figure" class="square"></div>
+
+    <button id="circle-button">丸くなるのです</button>
+    <button id="square-button">尖るのです</button>
 
     <section>
       <h3>input 要素と input イベント</h3>
